# argus-sentinel

./: .dockerignore  .env.example  .gitignore  01_pedestrian_detection.py  02_two_stage_face.py  03_mot17_video_pipeline.py  CLAUDE.md  Dockerfile  HANDOFF.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
argus/: __init__.py  _onnx.py  cli.py
argus/audio/: __init__.py  extract.py
argus/audio/backends/: __init__.py  huggingface.py
argus/core/: __init__.py  protocols.py  taxonomy.py  types.py
argus/detect/: __init__.py
argus/detect/backends/: __init__.py  ultralytics.py
argus/embed/: __init__.py
argus/embed/backends/: __init__.py  insightface.py
argus/face/: __init__.py  align.py  gate.py
argus/face/detect/: __init__.py
argus/face/detect/backends/: __init__.py  insightface.py
argus/identity/: __init__.py  _embed.py  admin.py  cluster.py  search.py
argus/mcp/: __init__.py  __main__.py  _serialize.py  auth.py  server.py
argus/pipeline/: __init__.py  _video.py  audio.py  ingest.py  peek.py  tracking.py
argus/store/: __init__.py
argus/store/backends/: __init__.py  sqlite.py
argus/track/: __init__.py
argus/track/backends/: __init__.py  bytetrack.py
context/: architecture.md  face-id-design.md  implementation-plan.md  mcp-oauth-plan.md  mcp-server.md
deploy/keycloak/: realm-argus.json
examples/: 01_dvr_person_tracking.py  02_dvr_vehicle_tracking.py  03_peek_daterange.py  04_peek_open_vocab.py  05_face_id_ingest.py  06_audio_classification.py  custom_backend.py  ingest_clip.py  mcp_client_demo.py  peek_folder.py  peek_open_vocab.py  track_clip.py
faces_cv/: __init__.py  detection.py  pipeline.py  tracking.py
scripts/: smoke.sh
tests/: conftest.py  test_align.py  test_audio.py  test_cli.py  test_cluster.py  test_compliance.py  test_detection.py  test_gate.py  test_ingest.py  test_mcp.py  test_mcp_auth.py  test_peek.py  test_pipeline.py  test_search.py  test_store.py  test_store_search.py  test_tracking.py
